--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase-tools": "^9.16.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
